--- a/style.css
+++ b/style.css
@@ -1,19 +1,118 @@
-body {
-  background-color: rgb(200,200,200);}
-
-p {
-  font-family: Arial, Verdana, sans-serif;
-  background-color: white;
+* {
+  width: auto;
 }
 
-h1, h2, h3 {
-  font-family: Arial, Verdana;
+body {
+  color: black;
+  font-family: Arial, sans-serif;
+  font-size: 11pt;
+  margin: 15px auto;
+}
+
+.nav {
+  float: left;
+  width: 200px;
+}
+
+.nav ul {
+  margin: 10px 0 0 0;
+  padding: 0;
+}
+
+.nav li {
+  display: block;
+  font-size: 15px;
+  list-style: none;
+  padding: 5px 10px;
+  width: 160px;
+}
+
+.nav .selected {
+  background: #EEE;
+  font-weight: bold;
 }
 
 h1 {
-  background-color: rgb(78,135,43);
+  border-bottom: 1px solid #CCC;
+  padding-bottom: 10px;
 }
 
-h2, h3 {
-  background-color: rgb(224,224,107)
+.contents {
+  padding-left: 210px;
+}
+
+a,
+a:visited {
+  color: #10208C;
+  text-decoration: none;
+}
+
+.meta {
+  color: #888;
+  font-size: 13px;
+}
+
+img {
+
+}
+
+.block {
+  margin: 20px 0;
+}
+
+.warning {
+  background: #FEE;
+  border: 1px solid #A00;
+}
+
+.user {
+  color: #10208C;
+  margin-right: 4px;
+}
+
+.comment {
+  background: #EEE;
+  margin: 5px 0;
+  padding: 10px;
+}
+
+.thread {
+  border: 1px solid #CCC;
+  margin: 0 0 20px 0;
+  padding: 10px;
+}
+
+.message_header {
+  border-top: 1px solid #CCC;
+  margin: 10px 0 0 0;
+  padding: 10px 0 0 0;
+}
+
+.message_header .meta {
+  float: right;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+th {
+  font-weight: normal;
+  padding: 5px 0;
+  text-align: left;
+  vertical-align: top;
+  width: 150px;
+}
+
+td {
+  padding: 5px 0;
+}
+
+.footer {
+  clear: both;
+  color: #888;
+  font-size: 13px;
+  margin-top: 10px;
+  text-align: center;
 }
