--- a/style.css
+++ b/style.css
@@ -1,95 +1,13 @@
-* {
-  width: auto;
-}
-
 body {
   color: black;
   font-family: Arial, sans-serif;
   font-size: 11pt;
   margin: 15px auto;
+  width: 860px;
 }
 
-.nav {
-  float: left;
-  width: 200px;
-}
-
-.nav ul {
-  margin: 10px 0 0 0;
-  padding: 0;
-}
-
-.nav li {
-  display: block;
-  font-size: 15px;
-  list-style: none;
-  padding: 5px 10px;
-  width: 160px;
-}
-
-.nav .selected {
-  background: #EEE;
-  font-weight: bold;
-}
-
-h1 {
-  border-bottom: 1px solid #CCC;
-  padding-bottom: 10px;
-}
-
-.contents {
-  padding-left: 210px;
-}
-
-a,
-a:visited {
-  color: #10208C;
-  text-decoration: none;
-}
-
-.meta {
-  color: #888;
-  font-size: 13px;
-}
-
-/*img {
-
-}*/
-
-.block {
-  margin: 20px 0;
-}
-
-.warning {
-  background: #FEE;
-  border: 1px solid #A00;
-}
-
-.user {
-  color: #10208C;
-  margin-right: 4px;
-}
-
-.comment {
-  background: #EEE;
-  margin: 5px 0;
-  padding: 10px;
-}
-
-.thread {
-  border: 1px solid #CCC;
-  margin: 0 0 20px 0;
-  padding: 10px;
-}
-
-.message_header {
-  border-top: 1px solid #CCC;
-  margin: 10px 0 0 0;
-  padding: 10px 0 0 0;
-}
-
-.message_header .meta {
-  float: right;
+a:hover {
+    background-color: #77D3F2;
 }
 
 ul {
@@ -107,12 +25,4 @@ th {
 
 td {
   padding: 5px 0;
-}
-
-.footer {
-  clear: both;
-  color: #888;
-  font-size: 13px;
-  margin-top: 10px;
-  text-align: center;
 }
