--- a/style.css
+++ b/style.css
@@ -6,31 +6,38 @@ body {
   color: black;
   font-family: Arial, sans-serif;
   font-size: 11pt;
+  max-width: 860px;
   margin: 15px auto;
-  width: 860px;
 }
 
-#brand_statement {
-  margin: 0px 10;
+.brand_statement {
+  display: inline;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 15px;
+  margin-left: 110px;
+  text-align: center;
 }
 
 img {
+  display: inline;
   max-width: 70%;
-  width: auto;
-  height: auto;
+  /*width: auto;
+  height: auto;*/
 }
 
-#header {
-  margin-left: 13.5em;
+span.nickname {
+  font-size: 50%;
 }
 
-#portrait {
-  margin-left: 8em;
+h1.full_name {
+  display: inline;
+  text-align: center;
+  /*width:*/
+  /*margin-left: 13.5em;*/
 }
 
-#projects {
-  margin-left: -1.1em;
-}
+
 
 a:hover {
     background-color: #77D3F2;
@@ -55,5 +62,5 @@ td {
 
 .skills {
   columns: 100px 3;
-  break-inside: ;
+  /*break-inside: ;*/
 }
